--- a/views/admin/adminAddRest.ejs
+++ b/views/admin/adminAddRest.ejs
@@ -22,6 +22,14 @@
             .btn-hidden {
                 display: none;
             }
+            .restInfo input {
+                width: 600px;
+                height: 36px;
+                margin-bottom: 5px;
+            }
+            .restInfo textarea {
+                width: 600px;
+            }
         </style>
     </head>
     <body>
@@ -32,6 +40,7 @@
                 <form name="form-addRestInfo">
                     <fieldset class="restInfo">
                         <legend>식당 정보</legend>
+                        <p>*은 필수 입력값입니다.</p>
                         <label for="rest_name">이름 *</label>
                         <input type="text" id="rest_name" name="rest_name" required /><br />
                         <label for="rest_desc">설명</label>
@@ -63,6 +72,7 @@
                             <option value="양식">양식</option>
                             <option value="중식">중식</option>
                             <option value="디저트">디저트</option>
+                            <option value="기타">기타</option>
                         </select>
                         <button type="button" id="btnAdd">+</button>
                         <br />
@@ -118,11 +128,12 @@
                         },
                     });
                     if (result.data.isSuccess) {
+                        alert("등록되었습니다.");
                         window.location.href = `/admin/addRestaurantMenu?rest_index=${result.data.rest_index}`;
                     }
                 } catch (err) {
                     if (!err.response.data.isSuccess) {
-                        alert("식당을 추가하지 못했습니다.");
+                        alert("식당을 등록하지 못했습니다.");
                     }
                 }
             });
@@ -143,6 +154,7 @@
                     "양식",
                     "중식",
                     "디저트",
+                    "기타",
                 ];
 
                 for (let i = 0; i < categories.length; i++) {
