--- a/views/index.ejs
+++ b/views/index.ejs
@@ -59,7 +59,7 @@
         </div>
 
         <br /><br />
-        <div>
+        <!-- <div>
             <nav aria-label="Page navigation example">
                 <ul class="pagination justify-content-center">
                     <li class="page-item disabled">
@@ -73,7 +73,7 @@
                     </li>
                 </ul>
             </nav>
-        </div>
+        </div> -->
 
         <!-- footer include -->
         <%- include('./include/footer') %>
