--- a/static/css/header.css
+++ b/static/css/header.css
@@ -106,6 +106,13 @@ header img {
     width: 11.875rem;
     padding: 0.75rem 0;
 }
+
+/* input register */
+input:read-only {
+    background-color: lightyellow;
+}
+
+
 /* /////////////// */
 /* @import url("https://fonts.googleapis.com/css?family=DM+Sans:500,700&display=swap");
 
