--- a/views/mypage/profile.ejs
+++ b/views/mypage/profile.ejs
@@ -23,6 +23,8 @@
             <div class="profile">
                 <span>아이디</span>
                 <input type="text" disabled value="<%= userInfo.id%>" />
+                <span>비밀번호</span>
+                <input type="text" disabled value="● ● ● ● ● ● ●" />
                 <span>닉네임</span><input type="text" disabled value="<%= userInfo.nickname%>" />
                 <span>이메일</span><input type="email" disabled value="<%= userInfo.email%>" />
                 <div class="updateAndDeleteUser">
